--- a/team2.html
+++ b/team2.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>코딩 카페 - 개발자들의 아지트</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="<https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css>" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>다시 시작! 오전 11시45분</h1>
+    <!-- 1. 헤더 영역 (팀장) -->
+    <header>
+        <!-- 여기에 로고와 메뉴 -->
+    </header>
+
+    <!-- 2. 메인 비주얼 영역 (메인 섹션 담당) -->
+    <section id="main-visual">
+        <!-- 여기에 큰 이미지와 메인 문구 -->
+    </section>
+
+    <!-- 3. 서비스 소개 영역 (서브 섹션 담당) -->
+    <section id="services">
+        <!-- 여기에 3-4개 카드 -->
+    </section>
+
+    <!-- 4. 상세 소개 영역 (콘텐츠 담당) -->
+    <section id="about">
+        <!-- 여기에 상세 설명 -->
+    </section>
+
+    <!-- 5. 푸터 영역 (부팀장) -->
+    <footer>
+        <!-- 여기에 회사 정보 -->
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="<https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js>"></script>
+    <!-- Custom JS -->
+    <script src="js/main.js"></script>
 </body>
 </html>
