--- a/team2.html
+++ b/team2.html
@@ -3,6 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        footer {
+      background-color: #d8f8d8;
+      padding: 10px;
+      text-align: center;
+      font-family: Arial, sans-serif;
+    }
+    .back-to-top {
+      border-bottom: 2px solid green;
+      display: inline-block;
+      padding-bottom: 2px;
+      margin-bottom: 10px;
+    }
+    .back-to-top a {
+      color: green;
+      text-decoration: none;
+    }
+    .back-to-top a:hover {
+      text-decoration: underline;
+    }
+    .customer-center a {
+      color: green;
+      text-decoration: none;
+    }
+    .customer-center a:hover {
+      text-decoration: underline;
+    }
+    footer p {
+      margin: 5px 0;
+    }
+    </style>
     <title>코딩 카페 - 개발자들의 아지트</title>
 
     <!-- Bootstrap CSS -->
@@ -33,8 +64,15 @@
     </section>
 
     <!-- 5. 푸터 영역 (부팀장) -->
-    <footer>
-        <!-- 여기에 회사 정보 -->
+    <footer>    
+         <div class="back-to-top">
+            <a href="#" onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); return false;">Back to Top</a>
+        </div>
+             <p>Made by REBONE</p>
+        <div class="customer-center">
+            <a href="customer-support.html">Customer Center</a>
+        </div>
+            <p>Copyright © 2025 REBONE . 모든 권리 보유.</p>
     </footer>
 
     <!-- Bootstrap JS -->
