--- a/team2.html
+++ b/team2.html
@@ -35,6 +35,7 @@
     }
     </style>
     <title>코딩 카페 - 개발자들의 아지트</title>
+    <p>팀2 페이지입니다. 점심 후 테스트</p>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
