--- a/MJ/reserve.html
+++ b/MJ/reserve.html
@@ -1,223 +1,191 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>서비스 접수</title>
-    <!-- Bootstrap CSS -->
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-    />
-    <!-- Flatpickr CSS -->
-    <link
-        href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
-        rel="stylesheet"
-    />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>서비스 접수</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- Flatpickr CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet"/>
     <!-- 커스텀 CSS -->
-    <link rel="stylesheet" href="css/reserve.css" />
+  <link rel="stylesheet" href="css/reserve.css"/>
+  <!-- Daum Postcode API -->
+  <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+  <!-- Flatpickr core -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
 </head>
 <body>
-    <!-- Step Bar -->
-    <nav class="step-bar" aria-label="진행 단계">
+  <!-- Step Bar -->
+  <nav class="step-bar" aria-label="진행 단계">
     <ul class="step-bar__list">
-        <li class="step-bar__item" data-step="1">
-        <span class="step-bar__label">개인정보 이용 동의</span>
-        <span class="step-bar__arrow">›</span>
-        </li>
-        <li class="step-bar__item" data-step="2">
-        <span class="step-bar__label">배출 품목 입력</span>
-        <span class="step-bar__arrow">›</span>
-        </li>
-        <li class="step-bar__item" data-step="3">
-        <span class="step-bar__label">기본정보 입력/본인인증</span>
-        <span class="step-bar__arrow">›</span>
-        </li>
-        <li class="step-bar__item" data-step="4">
+      <li class="step-bar__item" data-step="1">
+        <span class="step-bar__label">개인정보 이용 동의</span><span class="step-bar__arrow">›</span>
+      </li>
+      <li class="step-bar__item" data-step="2">
+        <span class="step-bar__label">배출 품목 입력</span><span class="step-bar__arrow">›</span>
+      </li>
+      <li class="step-bar__item" data-step="3">
+        <span class="step-bar__label">기본정보 입력/본인인증</span><span class="step-bar__arrow">›</span>
+      </li>
+      <li class="step-bar__item" data-step="4">
         <span class="step-bar__label">예약확인/완료</span>
-        </li>
+      </li>
     </ul>
-    </nav>
+  </nav>
 
-    <!-- Prev/Next btn 추가 -->
-    <div class="step-controls d-flex justify-content-between mt-4">
-        <button id="prevBtn" class="btn button-secondary" disabled>이전</button>
-        <button id="nextBtn" class="btn button-primary">다음</button>
-    </div>
+  <!-- Prev/Next 버튼 -->
+  <div class="step-controls d-flex justify-content-between mt-4">
+    <button id="prevBtn" class="btn button-secondary" disabled>이전</button>
+    <button id="nextBtn" class="btn button-primary">다음</button>
+  </div>
 
-    <!-- 개인정보 이용 동의 섹션 -->
-    <section id="step-1" class="step-section active">
+  <!-- 1단계 -->
+  <section id="step-1" class="step-section active">
     <h2>개인정보 이용 동의</h2>
     <div class="terms-box">
-        <p>서비스 이용을 위해 개인정보가 필요합니다. 아래 약관을 확인해 주세요.</p>
-        <div class="terms-content">
-        <!-- 실제 약관 텍스트 삽입 -->
+      <p>서비스 이용을 위해 개인정보가 필요합니다. 아래 약관을 확인해 주세요.</p>
+      <div class="terms-content">
         <p>여기에 길고 긴 약관 내용이 들어갑니다...</p>
-        </div>
+      </div>
     </div>
-
     <div class="form-check mt-3">
-        <input class="form-check-input" type="radio" name="age" id="ageOver" value="over">
-        <label class="form-check-label" for="ageOver">만 14세 이상입니다.</label>
+      <input type="radio" class="form-check-input" id="ageOver" name="age" value="over"/>
+      <label class="form-check-label" for="ageOver">만 18세 이상입니다.</label>
     </div>
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="age" id="ageUnder" value="under">
-        <label class="form-check-label" for="ageUnder">만 14세 미만입니다.</label>
+      <input type="radio" class="form-check-input" id="ageUnder" name="age" value="under"/>
+      <label class="form-check-label" for="ageUnder">만 18세 미만입니다.</label>
     </div>
-
     <div class="form-check mt-2">
-        <input class="form-check-input" type="checkbox" id="agreeCheckbox">
-        <label class="form-check-label" for="agreeCheckbox">약관에 동의합니다. (필수)</label>
+      <input type="checkbox" class="form-check-input" id="agreeCheckbox"/>
+      <label class="form-check-label" for="agreeCheckbox">약관에 동의합니다. (필수)</label>
     </div>
-    </section>
+  </section>
 
-    <!-- 배출 품목 선택 섹션 -->
-    <section id="step-2" class="step-section">
+  <!-- 2단계 -->
+  <section id="step-2" class="step-section">
     <h2>배출 품목 선택</h2>
-
-    <!-- 1) 대분류 버튼 그룹 -->
-    <div id="majorList" class="d-flex gap-2 mb-3">
-        <!-- JS가 동적 생성 -->
-    </div>
-
-    <!-- 2) 중분류 버튼 그룹 -->
+    <div id="majorList" class="d-flex gap-2 mb-3"></div>
     <div id="mediumList" class="d-flex gap-2 mb-3"></div>
 
-    <!-- 3) 소분류 팝업 -->
+    <!-- 소분류 모달 -->
     <div class="modal fade" id="minorModal" tabindex="-1">
-        <div class="modal-dialog">
+      <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+          <div class="modal-header">
             <h5 class="modal-title">소분류 선택</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body d-flex flex-wrap gap-2" id="minorList">
-            <!-- JS가 동적 삽입 -->
-            </div>
+          </div>
+          <div class="modal-body d-flex flex-wrap gap-2" id="minorList"></div>
         </div>
-        </div>
+      </div>
     </div>
 
-    <!-- 4) 선택된 항목 테이블 -->
     <table class="table">
-        <thead>
-        <tr>
-            <th>대분류</th>
-            <th>중분류</th>
-            <th>소분류</th>
-            <th>수량</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody id="selectedItems"></tbody>
+      <thead>
+        <tr><th>대분류</th><th>중분류</th><th>소분류</th><th>수량</th><th></th></tr>
+      </thead>
+      <tbody id="selectedItems"></tbody>
     </table>
 
     <div class="form-check mt-3">
-        <input class="form-check-input" type="checkbox" id="itemNoticeCheckbox">
-        <label class="form-check-label" for="itemNoticeCheckbox">
-        배출 품목 안내 사항을 확인했습니다. (필수)
-        </label>
+      <input type="checkbox" class="form-check-input" id="itemNoticeCheckbox"/>
+      <label class="form-check-label" for="itemNoticeCheckbox">배출 품목 안내 사항을 확인했습니다. (필수)</label>
     </div>
-    </section>
+  </section>
 
-
-    <!-- 기본 정보 입력·본인 인증 섹션 -->
-    <section id="step-3" class="step-section">
+  <!-- 3단계 -->
+  <section id="step-3" class="step-section">
     <h2>기본 정보 입력·본인 인증</h2>
-        <form id="form-step-3">
-            <div class="mb-3">
-            <label for="nameInput" class="form-label">이름</label>
-            <input type="text" class="form-control" id="nameInput" required />
-            </div>
-            <div class="mb-3">
-            <label for="mobileInput" class="form-label">휴대폰 번호</label>
-            <input type="tel" class="form-control" id="mobileInput" placeholder="010-1234-5678" required />
-            </div>
-            <div class="mb-3">
-            <label for="phoneInput" class="form-label">일반전화 (선택)</label>
-            <input type="tel" class="form-control" id="phoneInput" placeholder="02-123-4567" />
-            </div>
-            <div class="row g-2 mb-3">
-            <div class="col-4">
-                <label for="postcodeInput" class="form-label">우편번호</label>
-                <input type="text" class="form-control" id="postcodeInput" readonly required />
-            </div>
-            <div class="col-8 d-flex align-items-end">
-                <button type="button" class="btn button-secondary" id="addressSearchBtn">
-                우편번호 검색
-                </button>
-            </div>
-            </div>
-            <div class="mb-3">
-            <label for="roadAddressInput" class="form-label">도로명주소</label>
-            <input type="text" class="form-control" id="roadAddressInput" readonly required />
-            </div>
-            <div class="mb-3">
-            <label for="detailAddressInput" class="form-label">상세주소</label>
-            <input type="text" class="form-control" id="detailAddressInput" required />
-            </div>
-            <div class="mb-3">
-            <label for="residenceSelect" class="form-label">주거 형태</label>
-            <select class="form-select" id="residenceSelect" required>
-                <option value="">선택하세요</option>
-                <option value="apartment">아파트</option>
-                <option value="house">단독주택</option>
-                <option value="villa">빌라/연립주택</option>
-            </select>
-            </div>
-            <div class="form-check form-switch mb-3">
-            <input class="form-check-input" type="checkbox" id="elevatorSwitch" />
-            <label class="form-check-label" for="elevatorSwitch">엘리베이터 있음</label>
-            </div>
-            <div class="mb-3">
-            <label for="dateInput" class="form-label">희망 예약일</label>
-            <input type="text" class="form-control" id="dateInput" placeholder="날짜 선택" required />
-            </div>
-        </form>
-    </section>
+    <form id="form-step-3">
+      <div class="mb-3">
+        <label for="nameInput" class="form-label">이름</label>
+        <input id="nameInput" type="text" class="form-control" required/>
+      </div>
+      <div class="mb-3">
+        <label for="mobileInput" class="form-label">휴대폰 번호</label>
+        <input id="mobileInput" type="tel" class="form-control" placeholder="010-1234-5678" required/>
+      </div>
+      <div class="mb-3">
+        <label for="phoneInput" class="form-label">일반전화 (선택)</label>
+        <input id="phoneInput" type="tel" class="form-control" placeholder="02-123-4567"/>
+      </div>
+      <div class="row g-2 mb-3">
+        <div class="col-4">
+          <label for="postcodeInput" class="form-label">우편번호</label>
+          <input id="postcodeInput" type="text" class="form-control" readonly required/>
+        </div>
+        <div class="col-8 d-flex align-items-end">
+          <button id="addressSearchBtn" type="button" class="btn button-secondary">우편번호 검색</button>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="roadAddressInput" class="form-label">도로명주소</label>
+        <input id="roadAddressInput" type="text" class="form-control" readonly required/>
+      </div>
+      <div class="mb-3">
+        <label for="detailAddressInput" class="form-label">상세주소</label>
+        <input id="detailAddressInput" type="text" class="form-control" required/>
+      </div>
+      <div class="mb-3">
+        <label for="residenceSelect" class="form-label">주거 형태</label>
+        <select id="residenceSelect" class="form-select" required>
+          <option value="">선택하세요</option>
+          <option value="apartment">아파트</option>
+          <option value="house">단독주택</option>
+          <option value="villa">빌라/연립주택</option>
+        </select>
+      </div>
+      <div class="form-check form-switch mb-3">
+        <input id="elevatorSwitch" type="checkbox" class="form-check-input"/>
+        <label class="form-check-label" for="elevatorSwitch">엘리베이터 있음</label>
+      </div>
+      <div class="mb-3">
+        <label for="dateInput" class="form-label">희망 예약일</label>
+        <input id="dateInput" type="text" class="form-control" placeholder="날짜 선택" required/>
+      </div>
+    </form>
 
-    <!-- 예약 확인·완료 섹션 -->
-    <section id="step-4" class="step-section">
+    <!-- 우편번호 팝업 (한 곳만) -->
+
+    <div id="postcodePopup"
+        style="display:none; position:fixed;
+                top:10%; left:50%; transform:translateX(-50%);
+                z-index:2000; width:400px; height:400px;
+                background:#fff; border:1px solid #ccc;
+                box-shadow:0 2px 8px rgba(0,0,0,0.2);">
+    <button id="postcodeCloseBtn"
+            type="button"
+            style="position:absolute; top:8px; right:8px;
+                    background:transparent; border:none;
+                    font-size:1.5rem; cursor:pointer;">×</button>
+    <div id="postcodeContainer" style="width:100%; height:100%;"></div>
+</div>
+
+  </section>
+
+  <!-- 4단계 -->
+  <section id="step-4" class="step-section">
     <h2>예약 확인·완료</h2>
+    <div class="summary-box mb-4">
+      <h3>선택 품목 요약</h3>
+      <table class="table">
+        <thead><tr><th>품목</th><th>수량</th></tr></thead>
+        <tbody id="itemSummary"></tbody>
+      </table>
+    </div>
+    <div class="summary-box mb-4">
+      <h3>입력 정보 요약</h3>
+      <ul id="infoSummary" class="list-group"></ul>
+    </div>
+    <div class="form-check"><input id="notifySms" type="checkbox" class="form-check-input"/><label class="form-check-label" for="notifySms">문자 알림</label></div>
+    <div class="form-check mb-4"><input id="notifyKakao" type="checkbox" class="form-check-input"/><label class="form-check-label" for="notifyKakao">카카오톡 알림</label></div>
+  </section>
 
-        <!-- 선택 품목 요약 -->
-        <div class="summary-box mb-4">
-            <h3>선택 품목 요약</h3>
-            <table class="table">
-            <thead>
-                <tr>
-                <th>품목</th>
-                <th>수량</th>
-                </tr>
-            </thead>
-            <tbody id="itemSummary">
-                <!-- JS로 동적으로 채워짐 -->
-            </tbody>
-            </table>
-        </div>
-
-        <!-- 입력 정보 요약 -->
-        <div class="summary-box mb-4">
-            <h3>입력 정보 요약</h3>
-            <ul id="infoSummary" class="list-group">
-            <!-- JS로 동적으로 채워짐 -->
-            </ul>
-        </div>
-
-        <!-- 알림 채널 선택 -->
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="notifySms" />
-            <label class="form-check-label" for="notifySms">문자 알림</label>
-        </div>
-        <div class="form-check mb-4">
-            <input class="form-check-input" type="checkbox" id="notifyKakao" />
-            <label class="form-check-label" for="notifyKakao">카카오톡 알림</label>
-        </div>
-    </section>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/flatpickr.min.js"></script>
-    <script src="js/reserve.js"></script>
+  <!-- Bootstrap & reserve.js -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="js/reserve.js"></script>
 </body>
 </html>
-
