--- a/bj/기타안내.html
+++ b/bj/기타안내.html
@@ -1,12 +1,159 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>재활용품 종류 및 배출방법</title>
+  <meta charset="utf-8">
+  <title>기타 재활용품 분리배출 안내</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- 공통 CSS -->
+  <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
-    <img src="images/기타안내.png" alt="프로젝트 1">
+  <!-- ===== 헤더 & 요약 ===== -->
+  <header class="header">
+    <div class="container">
+      <h1 class="m0">재활용품 분리배출 요령</h1>
+      <p class="small mt8">의류 및 원단류, 폐건전지, 폐식용유, 폐형광등 </p>
 
+      <!-- 상단 요약 배지(알약형) -->
+      <div class="hero mt16">
+        <span class="pill" aria-current="page"><img src="images/기타.png" alt="종이팩" class="icon_image"></span>
+        <p class="m0">이물질 제거 → 마른 상태로 배출 → 재사용이 가능한 제품 등은 전용수거함에 배출</p>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <!-- =======================================================
+         A. 종이류 섹션
+         ======================================================= -->
+    <section class="mt24" id="paper">
+      <h2 class="m0">금속캔 및 고철류</h2>
+      <p class="small mt8">음료 / 주류캔 / 식료품캔/ 기타캔(부탄가스, 살충제 용기 등) / 고철</p>
+
+      <div class="grid mt16">
+        <!-- 헌옷 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">헌옷, 신발, 가방, 커튼, 카펫 등</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/헌옷.jpg" alt="헌옷" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️지역 내 설치된 의류 수거함에 배출합니다.</li>
+              <br>
+              <li>♻️재사용이 불가능한 의류는 특수규격마대에 담아 배출합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 폐건전지 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">폐건전지</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/건전지.jpg" alt="건전지" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️전지를 제품에서 분리하여 배출합니다.</li>
+              <li>♻️전용수거함(주민센터, 아파트 동별 우편함 등)에 배출합니다.</li>
+              <li style="font-size: 0.9rem; color: red;">🙅‍♂️휴대폰 배터리는 휴대폰과 함께 배출</li>
+            </ul>
+          </div>
+        </article>
+
+                <!-- 폐식용유 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">폐식용유</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/식용유.jpg" alt="식용유" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️이물질이 섞이지 않도록 모아 가까운 곳에 설치된 폐유 수거함에 배출합니다.</li>
+              <li style="font-size: 0.9rem; color: red;">🙅‍♂️절대로 싱크대 및 하수도에 배출 금지</li>
+            </ul>
+          </div>
+        </article>
+
+                <!-- 폐형광등 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">폐형광등</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/형광등.jpg" alt="형광등" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️깨지지 않도록 주의하여 전용수거함에 배출합니다.</li>
+              <li>♻️재활용이 가능한 형관등의 종류 : FL, FCL, CFL, FPL</li>
+              <li style="font-size: 0.9rem; color: red;">🙅‍♂️깨진 형광등은 신문지 등으로 싸서 종량제봉투로 배출</li>
+            </ul>
+          </div>
+        </article>
+
+      </div>
+
+      <!-- 허용/비해당 품목 라벨 -->
+      <p class="small mt16">
+        <span class="chip ok">해당품목</span> 헌옷, 신발, 가방, 카펫, 폐건전지, 폐식용유, 폐형광등 등
+        &nbsp;&nbsp;
+        <span class="chip no">비해당품목</span> 솜이불, 수건, 걸레, 베개, 방석, 바퀴달린 여행용 가방 등
+      </p>
+
+      <div class="grid mt16">
+        <!-- 배출 전 준비 (DO) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge ok" >DO</span><h3 class="m0">배출 전 준비</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li>♻️ 내용물 제거한 후 배출</li>
+              <li>♻️ 재활용이 가능한 형광등의 종류 확인 후 배출</li>
+              <li>♻️ 이물질이 섞이지 않도록 한 후 묶어서 배출</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 금지 (DON'T) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge no">DON'T</span><h3 class="m0">이렇게는 금지</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li style="color: red;">🙅‍♂️ 남아있는 식용유 싱크대 하수구에 배출</li>
+              <li style="color: red;">🙅‍♂️ 재사용이 불가능한 헌옷 및 신발 배출</li>
+              <li style="color: red;">🙅‍♂️ 깨진 형광등 상태 그대로 배출</li>
+            </ul>
+          </div>
+        </article>
+      </div>
+
+      <!-- 흐르는 물 헹구기 → 이물질 제거·말리기 → 모아 배출
+      <h3 class="mt24 m0">비닐류 분리배출 요령</h3>
+        <article class="card" style="border: none;">
+          <div class="card-body">
+            <img src="images/비닐 분리배출요령.jpg" alt="비닐류 분리배출 요령" style="width: 100%; height: auto; display: block;" >
+          </div>
+        </article>
+
+      <h3 class="mt24 m0">스티로폼 분리배출 요령</h3>
+        <article class="card" style="border: none;">
+          <div class="card-body">
+            <img src="images/스티로폼 분리배출요령.jpg" alt="스티로폼 분리배출 요령" style="width: 100%; height: auto; display: block;" >
+          </div>
+        </article>
+
+    </section> -->
+
+    
+
+    <!-- 하단 내비게이션(필요 시 수정) -->
+    <nav class="pager">
+      <a href="index.html" style="font-weight: bold;">← 메인으로</a>
+      <a href="종이안내.html" style="font-weight: bold;">다음: 종이 →</a>
+    </nav>
+  </main>
+
+
+
+  <!-- 페이지 전용 보조 스타일: 라벨(허용/비해당) -->
+  <style>
+    .chip{ display:inline-block; padding:4px 10px; border-radius:999px; font-size:12px; font-weight:700; border:1px solid }
+    .chip.ok{ background:#E9F5EA; color:#1e5f22; border-color:#53A451 }
+    .chip.no{ background:#FFF3CD; color:#7a4a00; border-color:#FFB703 }
+  </style>
 </body>
 </html>
