--- a/bj/플라스틱안내.html
+++ b/bj/플라스틱안내.html
@@ -1,12 +1,128 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>재활용품 종류 및 배출방법</title>
+  <meta charset="utf-8">
+  <title>플라스틱(플라스틱 + 투명페트) 분리배출 안내</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- 공통 CSS -->
+  <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
-    <img src="images/플라스틱안내.png" alt="프로젝트 1">
+  <!-- ===== 헤더 & 요약 ===== -->
+  <header class="header">
+    <div class="container">
+      <h1 class="m0">재활용품 분리배출 요령</h1>
+      <p class="small mt8">플라스틱 용기류 / 유색페트병 / 투명페트병 </p>
 
+      <!-- 상단 요약 배지(알약형) -->
+      <div class="hero mt16">
+        <span class="pill" aria-current="page"><img src="images/플라스틱(흑).png" alt="종이팩" class="icon_image"></span>
+        <span class="pill"><img src="images/페트(흑).png" alt="종이" class="icon_image"></span>
+        <p class="m0">이물질 제거 → 마른 상태로 배출 · 부착상표, 부속품 등은 제거</p>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <!-- =======================================================
+         A. 종이류 섹션
+         ======================================================= -->
+    <section class="mt24" id="paper">
+      <h2 class="m0">플라스틱</h2>
+      <p class="small mt8">플라스틱 용기류(PVC, PE, PP, PS, PSP, PET), 유색페트병, 투명페트병</p>
+
+      <div class="grid mt16">
+        <!-- 플라스틱용기 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">플라스틱 용기류</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/플라스틱용기.jpg" alt="플라스틱용기" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️내용물을 비우고 물로 헹군 후 이물질을 제거하여 배출합니다.</li>
+              <li style="font-size: 0.9rem; color: red;">🙅‍♂️물로 헹굴 수 없는 구조의 용기류(치약 용기 등)는 일반쓰레기로 배출</li>
+              <li>♻️부착상표, 부속품 등 본체와 다른 재질은 제거한 후 배출합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 투명페트 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">투명페트병</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/투명페트.jpg" alt="투명페트병" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️내용물을 비우고 물로 헹군 후 이물질을 제거하여 배출합니다.</li>
+              <br>
+              <li>♻️비닐 라벨을 제거한 후 압착하여 뚜껑은 닫아 투명페트병만 따로 배출합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+      </div>
+
+      <!-- 허용/비해당 품목 라벨 -->
+      <p class="small mt16">
+        <span class="chip ok">해당품목</span> 음료 용기, 세정 용기, 생수페트병, 음료페트병
+        &nbsp;&nbsp;
+        <span class="chip no">비해당품목</span> 플라스틱 이외의 재질이 부착된 완구•문구류, 옷걸이, 칫솔, 파일철, 전화기, 낚시대 등
+      </p>
+
+      <div class="grid mt16">
+        <!-- 배출 전 준비 (DO) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge ok" >DO</span><h3 class="m0">배출 전 준비</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li>♻️ 내용물 비우고 물로 헹군 뒤 말려 배출</li>
+              <li>♻️ 빨대, 비닐 등 다른 재질은 제거</li>
+              <li>♻️ 전용 수거함에 따로 배출(가능 시)</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 금지 (DON'T) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge no">DON'T</span><h3 class="m0">이렇게는 금지</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li style="color: red;">🙅‍♂️ 다른 재질과 혼합 배출</li>
+              <li style="color: red;">🙅‍♂️ 이물질(빨대, 비닐) 부착 상태로 배출</li>
+              <li style="color: red;">🙅‍♂️ 젖은 상태 그대로 배출</li>
+            </ul>
+          </div>
+        </article>
+      </div>
+
+      <!-- 흐르는 물 헹구기 → 이물질 제거·말리기 → 모아 배출 -->
+      <h3 class="mt24 m0">페트병(PET) 분리배출 요령</h3>
+        <article class="card" style="border: none;">
+          <div class="card-body">
+            <img src="images/페트병분리배출요령.jpg" alt="페트병 분리배출 요령" style="width: 100%; height: auto; display: block;" >
+          </div>
+        </article>
+
+    </section>
+
+    
+
+    <!-- 하단 내비게이션(필요 시 수정) -->
+    <nav class="pager">
+      <a href="index.html" style="font-weight: bold;">← 메인으로</a>
+      <a href="비닐안내.html" style="font-weight: bold;">다음: 비닐 →</a>
+    </nav>
+  </main>
+
+
+
+  <!-- 페이지 전용 보조 스타일: 라벨(허용/비해당) -->
+  <style>
+    .chip{ display:inline-block; padding:4px 10px; border-radius:999px; font-size:12px; font-weight:700; border:1px solid }
+    .chip.ok{ background:#E9F5EA; color:#1e5f22; border-color:#53A451 }
+    .chip.no{ background:#FFF3CD; color:#7a4a00; border-color:#FFB703 }
+  </style>
 </body>
 </html>
