--- a/bj/비닐안내.html
+++ b/bj/비닐안내.html
@@ -1,12 +1,136 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>재활용품 종류 및 배출방법</title>
+  <meta charset="utf-8">
+  <title>비닐류 분리배출 안내</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- 공통 CSS -->
+  <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
-    <img src="images/플라스틱안내.png" alt="프로젝트 1">
+  <!-- ===== 헤더 & 요약 ===== -->
+  <header class="header">
+    <div class="container">
+      <h1 class="m0">재활용품 분리배출 요령</h1>
+      <p class="small mt8">비닐포장재 / 1회용 비닐봉투 / 흰색 스티로폼 상자 및 완충재 </p>
 
+      <!-- 상단 요약 배지(알약형) -->
+      <div class="hero mt16">
+        <span class="pill" aria-current="page"><img src="images/비닐류-흑pp.png" alt="종이팩" class="icon_image"></span>
+        <span class="pill"><img src="images/비닐류-흑HDPE.png" alt="종이" class="icon_image"></span>
+        <p class="m0">이물질 제거 → 마른 상태로 배출 → 흩날리지 않도록 봉투에 담아 배출</p>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <!-- =======================================================
+         A. 종이류 섹션
+         ======================================================= -->
+    <section class="mt24" id="paper">
+      <h2 class="m0">비닐류</h2>
+      <p class="small mt8">비닐류(HDPE, PP, LDPE, PS, OTHER, PVC), 흰색 스티로폼 상자, 완충재</p>
+
+      <div class="grid mt16">
+        <!-- 비닐류 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">비닐류</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/비닐재활용.jpg" alt="1회용 비닐" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️내용물을 비우고 물로 헹군 후 이물질을 제거하여 배출합니다.</li>
+              <li style="color: red;">🙅‍♂️랩필름, 시트형 등 분리배출 표시가 없어도 비닐류로 배출</li>
+              <li>♻️흩날리지 않도록 봉투에 담아 배출합니다.</li>
+              <li style="color: red;">🙅‍♂️비해당품목은 종량제봉투 또는 대형폐기물로 배출</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 스티로폼 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">흰색 스티로폼류</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/스티로폼재활용.jpg" alt="투명페트병" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️내용물을 비우고 물로 헹군 후 이물질을 제거하여 배출합니다.</li>
+              <li>♻️부착상표 등 스티로폼과 다른 재질은 제거한 후 배출합니다.</li>
+              <li>♻️TV 등 전자제품 구입 시 완충재로 사용되는 발포합성수지 포장재는 가급적 구입처로 반납합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+      </div>
+
+      <!-- 허용/비해당 품목 라벨 -->
+      <p class="small mt16">
+        <span class="chip ok">해당품목</span> 1회용 봉투, 각종 비닐류, 포장용 발포스티렌상자, 완충재
+        &nbsp;&nbsp;
+        <span class="chip no">비해당품목</span> 랩필름, 식탁보, 고무장갑, 장판, 돗자리, 섬유류, 건축용 스티로폼, 유색 스티로폼
+      </p>
+
+      <div class="grid mt16">
+        <!-- 배출 전 준비 (DO) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge ok" >DO</span><h3 class="m0">배출 전 준비</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li>♻️ 내용물 비우고 물로 헹군 뒤 말려 배출</li>
+              <li>♻️ 부착상표 및 테이프 등 다른 재질은 제거</li>
+              <li>♻️ 압축 후 봉투 등 한곳에 모아 배출</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 금지 (DON'T) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge no">DON'T</span><h3 class="m0">이렇게는 금지</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li style="color: red;">🙅‍♂️ 다른 재질과 혼합 배출 • 유색스티로폼 배출</li>
+              <li style="color: red;">🙅‍♂️ 이물질(부착상표, 테이프) 부착 상태로 배출</li>
+              <li style="color: red;">🙅‍♂️ 젖은 상태 그대로 배출</li>
+            </ul>
+          </div>
+        </article>
+      </div>
+
+      <!-- 흐르는 물 헹구기 → 이물질 제거·말리기 → 모아 배출 -->
+      <h3 class="mt24 m0">비닐류 분리배출 요령</h3>
+        <article class="card" style="border: none;">
+          <div class="card-body">
+            <img src="images/비닐 분리배출요령.jpg" alt="비닐류 분리배출 요령" style="width: 100%; height: auto; display: block;" >
+          </div>
+        </article>
+
+      <h3 class="mt24 m0">스티로폼 분리배출 요령</h3>
+        <article class="card" style="border: none;">
+          <div class="card-body">
+            <img src="images/스티로폼 분리배출요령.jpg" alt="스티로폼 분리배출 요령" style="width: 100%; height: auto; display: block;" >
+          </div>
+        </article>
+
+    </section>
+
+    
+
+    <!-- 하단 내비게이션(필요 시 수정) -->
+    <nav class="pager">
+      <a href="index.html" style="font-weight: bold;">← 메인으로</a>
+      <a href="캔류안내.html" style="font-weight: bold;">다음: 캔류 →</a>
+    </nav>
+  </main>
+
+
+
+  <!-- 페이지 전용 보조 스타일: 라벨(허용/비해당) -->
+  <style>
+    .chip{ display:inline-block; padding:4px 10px; border-radius:999px; font-size:12px; font-weight:700; border:1px solid }
+    .chip.ok{ background:#E9F5EA; color:#1e5f22; border-color:#53A451 }
+    .chip.no{ background:#FFF3CD; color:#7a4a00; border-color:#FFB703 }
+  </style>
 </body>
 </html>
