--- a/bj/유리안내.html
+++ b/bj/유리안내.html
@@ -1,12 +1,126 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>재활용품 종류 및 배출방법</title>
+  <meta charset="utf-8">
+  <title>유리류 분리배출 안내</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- 공통 CSS -->
+  <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
-    <img src="images/유리안내.png" alt="프로젝트 1">
+  <!-- ===== 헤더 & 요약 ===== -->
+  <header class="header">
+    <div class="container">
+      <h1 class="m0">재활용품 분리배출 요령</h1>
+      <p class="small mt8">드링크제병 / 와인병 / 주스병 / 소주 • 맥주 • 청량음료병 </p>
 
+      <!-- 상단 요약 배지(알약형) -->
+      <div class="hero mt16">
+        <span class="pill" aria-current="page"><img src="images/유리(흑).png" alt="종이팩" class="icon_image"></span>
+        <p class="m0">이물질 제거 → 마른 상태로 배출 → 유리병이 깨지지 않도록 주의하여 배출</p>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <!-- =======================================================
+         A. 종이류 섹션
+         ======================================================= -->
+    <section class="mt24" id="paper">
+      <h2 class="m0">유리류</h2>
+      <p class="small mt8">드링크제병 / 와인병 / 주스병 / 소주 • 맥주 • 청량음료병</p>
+
+      <div class="grid mt16">
+        <!-- 비닐류 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">재사용병</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/재사용병.jpg" alt="재사용병" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️내용물을 비우고 물로 헹군 후 이물질을 제거하여 배출합니다.</li>
+              <br>
+              <li>♻️소주, 맥주 등 빈용기 보증금 대상 유리병은 소매점 등에 반납합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 스티로폼 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">재활용병</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/재활용병.jpg" alt="재활용병" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️내용물을 비우고 물로 헹군 후 이물질을 제거하여 배출합니다.</li>
+              <li>♻️상표제거가 가능한 경우 상표를 제거한 후 배출합니다.</li>
+              <li>♻️유리병이 깨지지 않도록 주의하여 배출합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+      </div>
+
+      <!-- 허용/비해당 품목 라벨 -->
+      <p class="small mt16">
+        <span class="chip ok">해당품목</span> 음료수병, 와인병, 양주병, 드링크병, 소주, 맥주병 등
+        &nbsp;&nbsp;
+        <span class="chip no">비해당품목</span> 깨지거나 코팅 및 내열 유리제품, 내열 유리제품, 크리스탈, 사기 • 도자기류 등 
+      </p>
+
+      <div class="grid mt16">
+        <!-- 배출 전 준비 (DO) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge ok" >DO</span><h3 class="m0">배출 전 준비</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li>♻️ 내용물 비우고 물로 헹군 뒤 말려 배출</li>
+              <li>♻️ 부착상표 및 테이프 등 다른 재질은 제거</li>
+              <li>♻️ 빈용기 보증금 대상 유리병은 소매점 등에 반납</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 금지 (DON'T) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge no">DON'T</span><h3 class="m0">이렇게는 금지</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li style="color: red;">🙅‍♂️ 다른 재질과 혼합 배출</li>
+              <li style="color: red;">🙅‍♂️ 코팅 및 다양한 색상이 들어간 유리제품 배출</li>
+              <li style="color: red;">🙅‍♂️ 깨진 유리 상태 그대로 배출</li>
+            </ul>
+          </div>
+        </article>
+      </div>
+
+      <!-- 흐르는 물 헹구기 → 이물질 제거·말리기 → 모아 배출 -->
+      <h3 class="mt24 m0">유리류 분리배출 요령</h3>
+        <article class="card" style="border: none;">
+          <div class="card-body">
+            <img src="images/유리분리배출요령.jpg" alt="비닐류 분리배출 요령" style="width: 100%; height: auto; display: block;" >
+          </div>
+        </article>
+    </section>
+
+    
+
+    <!-- 하단 내비게이션(필요 시 수정) -->
+    <nav class="pager">
+      <a href="index.html" style="font-weight: bold;">← 메인으로</a>
+      <a href="기타안내.html" style="font-weight: bold;">다음: 기타 →</a>
+    </nav>
+  </main>
+
+
+
+  <!-- 페이지 전용 보조 스타일: 라벨(허용/비해당) -->
+  <style>
+    .chip{ display:inline-block; padding:4px 10px; border-radius:999px; font-size:12px; font-weight:700; border:1px solid }
+    .chip.ok{ background:#E9F5EA; color:#1e5f22; border-color:#53A451 }
+    .chip.no{ background:#FFF3CD; color:#7a4a00; border-color:#FFB703 }
+  </style>
 </body>
 </html>
