--- a/bj/종이안내.html
+++ b/bj/종이안내.html
@@ -1,13 +1,181 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>재활용품 종류 및 배출방법</title>
+  <meta charset="utf-8">
+  <title>종이(종이류 + 종이팩) 분리배출 안내</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- 공통 CSS -->
+  <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
-    <img src="images/종이안내.png" alt="프로젝트 1">
-    <br>
-    <img src="images/종이안내2.png" alt="프로젝트 1">
+  <!-- ===== 헤더 & 요약 ===== -->
+  <header class="header">
+    <div class="container">
+      <h1 class="m0">재활용품 분리배출 요령</h1>
+      <p class="small mt8">신문지 / 책자·노트 / 종이컵 / 상자류(골판지) · 종이팩(살균팩·멸균팩)</p>
+
+      <!-- 상단 요약 배지(알약형) -->
+      <div class="hero mt16">
+        <span class="pill" aria-current="page"><img src="images/종이팩(흑).png" alt="종이팩" class="icon_image"></span>
+        <span class="pill"><img src="images/종이.png" alt="종이" class="icon_image"></span>
+        <p class="m0">이물질 제거 → 마른 상태로 배출 · 테이프/라벨/철심 등은 분리</p>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <!-- =======================================================
+         A. 종이류 섹션
+         ======================================================= -->
+    <section class="mt24" id="paper">
+      <h2 class="m0">종이류</h2>
+      <p class="small mt8">신문지, 책자·노트, 종이컵, 상자류(골판지 상자 등)</p>
+
+      <div class="grid mt16">
+        <!-- 신문지 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">신문지</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/신문지.jpg" alt="신문지 묶음" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️물기에 젖지 않도록 하고 반듯하게 펴서 차곡차곡 쌍흔 후 묶어서 배출합니다.</li>
+              <br>
+              <li>♻️비닐코팅된 광고지, 비닐류, 기타 오물이 섞이지 않도록 주의해야 합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 책자, 노트 등 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">책자 · 노트 등</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/책자.png" alt="책자, 노트 배출" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️비닐 코팅된 표지, 공책의 스프링 등은 제거 후 배출합니다.</li>
+              <br>
+              <li style="font-size: 0.9rem; color: red;">🙅‍♂️비닐 포장지는 재활용 제외 대상입니다.</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 종이컵 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">종이컵</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/종이컵재활용.jpg" alt="종이컵 분리배출" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️내용물을 비우고 물로 헹군 후 포개어 봉투에 넣거나 한데 묶어서 배출합니다.</li>
+              <br>
+              <li>♻️소량이거나 오염된 경우 일반쓰레기로 배출합니다.</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 상자류 -->
+        <article class="card">
+          <div class="card-head"><h3 class="m0">상자류(골판지 상자 등)</h3></div>
+          <div class="card-body">
+            <img class="example" src="images/종이상자재활용.jpeg" alt="골판지 상자 배출" loading="lazy">
+            <ul class="list-unstyled mt8">
+              <li>♻️테이프, 운송장 스티커 등 종이류와 다른 재질을 제거해주세요. 
+                이물질이 혼합되지 않도록 접어서 배출해주세요.</li>
+            </ul>
+          </div>
+        </article>
+      </div>
+
+      <!-- 택배상자 요령: Step 갤러리
+      <h3 class="mt24 m0">택배상자 분리배출 요령</h3>
+      <div class="gallery mt8">
+        <figure class="figure">
+          <img src="images/테이프제거.jpg " alt="운송장·테이프 제거" loading="lazy" class="stepImg">
+          <figcaption class="figcap">Step1 :  운송장, 테이프 제거하기</figcaption>
+        </figure>
+        <figure class="figure">
+          <span class="tag ok">Step 2</span>
+           <img src="images/테이프제거.jpg " alt="운송장·테이프 제거" loading="lazy" class="stepImg">
+          <figcaption class="figcap">상자는 잘 펴서 납작하게</figcaption>
+        </figure>
+        <figure class="figure">
+          <span class="tag ok">Step 3</span>
+          <img src="images/테이프제거.jpg " alt="운송장·테이프 제거" loading="lazy" class="stepImg">
+          <figcaption class="figcap">묶어서 배출하기</figcaption>
+        </figure>
+      </div>
+    </section> -->
+
+    <!-- =======================================================
+         B. 종이팩 섹션 (살균팩·멸균팩)
+         ======================================================= -->
+    <section class="mt24" id="paper-pack">
+      <h2 class="m0" style="margin-top: 60px;">종이팩 (살균팩 · 멸균팩)</h2>
+      <p class="small mt8">우유팩, 두유팩, 소주팩, 주스팩 등 — 일반 종이류와 혼합되지 않게 전용 수거함 권장</p>
+
+      <div class="note mt8">
+        전용 수거함이 없는 경우, 종이류와 구분될 수 있도록 가급적 끈 등으로 묶어 종이류 수거함으로 배출하세요.
+      </div>
+
+      <!-- 허용/비해당 품목 라벨 -->
+      <p class="small mt16">
+        <span class="chip ok">해당품목</span> 우유팩, 두유팩, 소주팩, 주스팩 등
+        &nbsp;&nbsp;
+        <span class="chip no">비해당품목</span> 종이컵, 신문지 등 종이류
+      </p>
+
+      <div class="grid mt16">
+        <!-- 배출 전 준비 (DO) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge ok" >DO</span><h3 class="m0">배출 전 준비</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li>♻️ 내용물 비우고 물로 헹군 뒤 말려 배출</li>
+              <li>♻️ 빨대, 비닐 등 다른 재질은 제거</li>
+              <li>♻️ 전용 수거함에 따로 배출(가능 시)</li>
+            </ul>
+          </div>
+        </article>
+
+        <!-- 금지 (DON'T) -->
+        <article class="card">
+          <div class="card-head">
+            <span class="badge no">DON'T</span><h3 class="m0">이렇게는 금지</h3>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled">
+              <li style="color: red;">🙅‍♂️ 일반 종이류와 혼합 배출</li>
+              <li style="color: red;">🙅‍♂️ 이물질(빵대, 비닐) 부착 상태로 배출</li>
+              <li style="color: red;">🙅‍♂️ 젖은 상태 그대로 배출</li>
+            </ul>
+          </div>
+        </article>
+      </div>
+
+
+            <!-- 종이팩 요령: 흐르는 물 헹구기 → 이물질 제거·말리기 → 모아 배출 -->
+      <h3 class="mt24 m0">종이팩 분리배출 요령</h3>
+        <article class="card" style="border: none;">
+          <div class="card-body">
+            <img src="images/분리배출요령.jpg" alt="종이컵 분리배출 요령" style="width: 100%; height: auto; display: block;" >
+          </div>
+        </article>
+    </section>
+
+    <!-- 하단 내비게이션(필요 시 수정) -->
+    <nav class="pager">
+      <a href="index.html" style="font-weight: bold;">← 메인으로</a>
+      <a href="플라스틱안내.html" style="font-weight: bold;">다음: 플라스틱 →</a>
+    </nav>
+  </main>
+
+
+
+  <!-- 페이지 전용 보조 스타일: 라벨(허용/비해당) -->
+  <style>
+    .chip{ display:inline-block; padding:4px 10px; border-radius:999px; font-size:12px; font-weight:700; border:1px solid }
+    .chip.ok{ background:#E9F5EA; color:#1e5f22; border-color:#53A451 }
+    .chip.no{ background:#FFF3CD; color:#7a4a00; border-color:#FFB703 }
+  </style>
 </body>
 </html>
