--- a/bj/index.html
+++ b/bj/index.html
@@ -7,8 +7,12 @@
 
 </head>
 <body>
+
+    <!-- 헤더 placeholder -->
+  <div id="header-placeholder"></div>
+
   <!-- header/main/article/section/footer/aside -> div  -->
-  <header class="header">
+  <header class="headerBj">
     <h1>재활용품 분리배출 요령 안내</h1>
     <p>폐기물의 자원화는 우리 가족의 분리배출에서 시작됩니다.</p>
   </header>  
@@ -99,5 +103,10 @@
     </a>
 
   </main>
+    <!-- 푸터 placeholder -->
+  <div id="footer-placeholder"></div>
+
+  <!-- 컴포넌트 로더 -->
+  <script src="info.js"></script>
 </body>
 </html>
