--- a/bj/유리안내.html
+++ b/bj/유리안내.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
+    <!-- 헤더 placeholder -->
+  <div id="header-placeholder"></div>
   <!-- ===== 헤더 & 요약 ===== -->
-  <header class="header">
+  <header class="headerBj">
     <div class="container">
       <h1 class="m0">재활용품 분리배출 요령</h1>
       <p class="small mt8">드링크제병 / 와인병 / 주스병 / 소주 • 맥주 • 청량음료병 </p>
@@ -113,6 +115,12 @@
       <a href="기타안내.html" style="font-weight: bold;">다음: 기타 →</a>
     </nav>
   </main>
+
+        <!-- 푸터 placeholder -->
+  <div id="footer-placeholder"></div>
+
+  <!-- 컴포넌트 로더 -->
+  <script src="info.js"></script>
 
 
 
