--- a/bj/종이안내.html
+++ b/bj/종이안내.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
+  <!-- 헤더 placeholder -->
+  <div id="header-placeholder"></div>
   <!-- ===== 헤더 & 요약 ===== -->
-  <header class="header">
+  <header class="headerBj">
     <div class="container">
       <h1 class="m0">재활용품 분리배출 요령</h1>
       <p class="small mt8">신문지 / 책자·노트 / 종이컵 / 상자류(골판지) · 종이팩(살균팩·멸균팩)</p>
@@ -168,6 +170,12 @@
       <a href="플라스틱안내.html" style="font-weight: bold;">다음: 플라스틱 →</a>
     </nav>
   </main>
+
+      <!-- 푸터 placeholder -->
+  <div id="footer-placeholder"></div>
+
+  <!-- 컴포넌트 로더 -->
+  <script src="info.js"></script>
 
 
 
