--- a/bj/플라스틱안내.html
+++ b/bj/플라스틱안내.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="cssbase.css">
 </head>
 <body>
+    <!-- 헤더 placeholder -->
+  <div id="header-placeholder"></div>
   <!-- ===== 헤더 & 요약 ===== -->
-  <header class="header">
+  <header class="headerBj">
     <div class="container">
       <h1 class="m0">재활용품 분리배출 요령</h1>
       <p class="small mt8">플라스틱 용기류 / 유색페트병 / 투명페트병 </p>
@@ -115,6 +117,12 @@
       <a href="비닐안내.html" style="font-weight: bold;">다음: 비닐 →</a>
     </nav>
   </main>
+
+        <!-- 푸터 placeholder -->
+  <div id="footer-placeholder"></div>
+
+  <!-- 컴포넌트 로더 -->
+  <script src="info.js"></script>
 
 
 
